--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -52,6 +52,16 @@
         "<all_urls>"
       ],
       "js": [
+        "view/js/MutationObserver.js"
+      ],
+      "all_frames": true,
+      "run_at": "document_start"
+    },
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
         "model/Queue.js",
         "controller/translation/TranslationMessage.js",
         "controller/translation/Translation.js"
