--- a/.github/workflows/publish_artifact.yml
+++ b/.github/workflows/publish_artifact.yml
@@ -36,7 +36,7 @@ jobs:
           if-no-files-found: error
           path: ${{github.workspace}}/extension/web-ext-artifacts/translatelocally-${{matrix.target}}.zip
 
-  upload-prerelease
+  upload-prerelease:
     if: github.ref == 'refs/heads/main'
     needs: build-extension
     runs-on: ubuntu-latest
